# nrx

./: .gitignore  .gitmodules  .pylintrc  Makefile  README.md  clab.ipynb  clab.j2  clab.py  claude.md  config.toml  mkdocs.yml  nb_export.py  nrx  nrx.conf  nrx.py  nrx.sh  ntopex.conf  ntopex.ipynb  ntopex.py  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  requirements_jupyter.txt  versions.yaml
.github/workflows/: docs.yml  pylint.yml  pypi.yml  systest.yml  testpypi.yml  unit-test.yml
clab/: topology.j2
clab/kinds/: Unknown.j2  arista-eos.j2  ceos.j2  cisco-ios.j2  linux.j2  vr-cisco_csr1000v.j2
docs/: BUILD.md  CONFIGURATION.md  INFRAGRAPH_EXPORT_SUMMARY.md  INFRAGRAPH_IMPLEMENTATION_PLAN.md  INFRAGRAPH_INSTANCE_INDEXING.md  TESTING.md  about.md  index.md  license.md  platform_map.md  project.md
docs/about/: credits.md
docs/customization/: platform_map.md  templates.md
docs/development/: build.md  contributing.md  inventory.md  testing.md
docs/development/infragraph/: implementation.md  indexing.md  summary.md
docs/examples/: air.md  cml.md  containerlab.md  graphite.md
docs/stylesheets/: extra.css
docs/userguide/: configuration.md  installation.md
interface_maps/: ceos.j2
jupyter/: ntopex.ipynb
nrx/: nrx.py
src/nrx/: __about__.py  __init__.py  nrx.py
tests/: nb_01_manufacturers.csv  nb_02_platforms.csv  nb_03_device_types.csv  nb_04_devices.csv  nb_05_interfaces.csv  nb_06_cables.csv  tracing.py
tests/air/: nrx.conf
tests/air/data/: air.air.json  air.cyjs
tests/air/import/: nb_01_site.csv  nb_02_platforms.csv  nb_03_deviceroles.csv  nb_04_devicetypes.csv  nb_05_devices.csv  nb_06_cables.csv
tests/ate/: nrx.conf
tests/ate/data/: ate.clab.yaml  ate.cyjs
tests/ate/import/: nb_01_site.csv  nb_02_manufacturers.csv  nb_03_platforms.csv  nb_04_deviceroles.csv  (+4 more)
tests/colo/: nrx.conf
tests/dc1/: nrx-no-site.conf  nrx.conf  platform_map.yml
tests/dc2/: nrx.conf
tests/h88/: .env_current  .env_latest  nrx.conf
tests/lrg/: nrx.conf
tests/site1/: nrx.conf
tests/unit/: __init__.py  test_config.py  test_nbfactory.py
(+92 files in other folders)
