[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "nrx"
version = "0.4.6"
authors = [
  { name="Netreplica", email="dev@netreplica.com" },
]
description = "nrx - netreplica exporter"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "certifi",
    "charset-normalizer>=3.3.2",
    "idna>=3.6",
    "Jinja2>=3.1.3",
    "MarkupSafe>=2.1.4",
    "networkx>=3.2.1",
    "pynetbox>=7.3.3",
    "requests>=2.31.0",
    "toml>=0.10.2",
    "urllib3>=2.1.0",
    "pyyaml>=6.0.1"
]

[project.urls]
Homepage = "https://github.com/netreplica/nrx"
Issues = "https://github.com/netreplica/nrx/issues"

[project.scripts]
nrx = "nrx:main"

[tool.hatch.build.targets.wheel]
sources = ["src/nrx"]
only-include = ["src/nrx"]

