[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "nrx"
dynamic = [
  "version"
]
authors = [
  { name="Alex Bortok and Netreplica Team", email="dev@netreplica.com" },
]
description = "nrx - netreplica exporter"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "certifi",
    "charset-normalizer>=3.4.2",
    "idna>=3.10",
    "Jinja2>=3.1.6",
    "MarkupSafe>=3.0.2",
    "networkx>=3.2.1",
    "pynetbox>=7.5.0",
    "requests>=2.32.3",
    "toml>=0.10.2",
    "urllib3>=2.4.0",
    "pyyaml>=6.0.2"
]

[project.urls]
Homepage = "https://github.com/netreplica/nrx"
Issues = "https://github.com/netreplica/nrx/issues"

[project.scripts]
nrx = "nrx:main"

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/nrx"]

[tool.hatch.version]
path = "src/nrx/__about__.py"